force-app/main/default/objects/QualityAssurance__c/QualityAssurance__c.object-meta.xml
<CustomObject>
    <description>Individual Call related QA for the effective customer service</description>
    <label>QA</label>
    <nameField>
        <displayFormat>QA-{YYYY}{MM}-{DD}-{0}</displayFormat>
        <label>QA ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>