force-app/main/default/objects/QualityAssurance__c/fields/Call_Control_Deviation_Skills__c.field-meta.xml
<CustomField>
    <fullName>Call_Control_Deviation_Skills__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Call Control / Deviation Skills</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>