force-app/main/default/objects/QualityAssurance__c/fields/Call_Failure__c.field-meta.xml
<CustomField>
    <fullName>Call_Failure__c</fullName>
    <formula>IF( Call_Score__c &lt; 90, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Failure</label>
    <type>Checkbox</type>
</CustomField>