force-app/main/default/objects/QualityAssurance__c/fields/Call_Score__c.field-meta.xml
<CustomField>
    <fullName>Call_Score__c</fullName>
    <formula>( Call_Close_Score__c  +  Call_Opening_Score__c  +  Customer_Experience_Score__c  +  Need_Identification_Score__c  +  Objection_Handling_Score__c  +  PMI_Score__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>