force-app/main/default/objects/QualityAssurance__c/fields/Coaching__c.field-meta.xml
<CustomField>
    <fullName>Coaching__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coaching</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>