force-app/main/default/objects/QualityAssurance__c/fields/Communication_Active_Listening_Skills__c.field-meta.xml
<CustomField>
    <fullName>Communication_Active_Listening_Skills__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Communication &amp; Active Listening Skills</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>