force-app/main/default/objects/QualityAssurance__c/fields/Correct_Exit_Used__c.field-meta.xml
<CustomField>
    <fullName>Correct_Exit_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Correct Exit Used</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>