force-app/main/default/objects/QualityAssurance__c/fields/Correct_Greeting_Used_Identifies_Self__c.field-meta.xml
<CustomField>
    <fullName>Correct_Greeting_Used_Identifies_Self__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Correct Greeting Used</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>