force-app/main/default/objects/QualityAssurance__c/fields/Customer_Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Score__c</fullName>
    <formula>( Case (Tone_Style__c,
1,7.5,
2,10,
3,11.5,
4,13.25,
5,13.75,
6,15,
0,13.25,0)  + 
Case( Telephone_Etiquette__c,
1,7.5,
2,10,
3,11.5,
4,13.25,
5,13.75,
6,15,
0,13.25,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Experience Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>