force-app/main/default/objects/QualityAssurance__c/fields/Data_Observation__c.field-meta.xml
<CustomField>
    <fullName>Data_Observation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Observation</label>
    <length>40000</length>
    <type>Html</type>
</CustomField>