force-app/main/default/objects/QualityAssurance__c/fields/Data_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Score__c</fullName>
    <label>Data Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>