force-app/main/default/objects/QualityAssurance__c/fields/Identifies_Customer__c.field-meta.xml
<CustomField>
    <fullName>Identifies_Customer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Identifies Customer</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>