force-app/main/default/objects/QualityAssurance__c/fields/Information_Resources__c.field-meta.xml
<CustomField>
    <fullName>Information_Resources__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Information &amp; Resources</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>