force-app/main/default/objects/QualityAssurance__c/fields/Need_Identification_Score__c.field-meta.xml
<CustomField>
    <fullName>Need_Identification_Score__c</fullName>
    <formula>( Case (Contact_Details_Confirmed_n_Updated__c,
1,4.1,
2,5,
3,6,
4,7,
5,7.5,
6,8.3,
0,7,0)  + 
Case( Communication_Active_Listening_Skills__c,
1,4.1,
2,5,
3,6,
4,7,
5,7.5,
6,8.3,
0,7,0)  + 
Case (Open_ended_Q_to_Identify_Cust_Travel__c,
1,4.1,
2,5,
3,6,
4,7,
5,7.5,
6,8.3,
0,7,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Identification Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>