force-app/main/default/objects/QualityAssurance__c/fields/Note_Details_are_Accurate_Clear__c.field-meta.xml
<CustomField>
    <fullName>Note_Details_are_Accurate_Clear__c</fullName>
    <label>Note Details are Accurate &amp; Clear</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>