force-app/main/default/objects/QualityAssurance__c/fields/Note_Logged_under_the_Correct_Area__c.field-meta.xml
<CustomField>
    <fullName>Note_Logged_under_the_Correct_Area__c</fullName>
    <label>Note Logged under the Correct Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>