force-app/main/default/objects/QualityAssurance__c/fields/Open_ended_Q_to_Identify_Cust_Travel__c.field-meta.xml
<CustomField>
    <fullName>Open_ended_Q_to_Identify_Cust_Travel__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Appropriate use of Open Ended Question</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>