force-app/main/default/objects/QualityAssurance__c/fields/PPD_CC__c.field-meta.xml
<CustomField>
    <fullName>PPD_CC__c</fullName>
    <formula>IF( Call_Close_Score__c &lt;= 3.00, 1,(IF( Call_Close_Score__c &gt; 3.00&amp;&amp; Call_Close_Score__c &lt;= 4.25, 2,(IF( Call_Close_Score__c &gt; 4.25 &amp;&amp; Call_Close_Score__c &lt;= 4.50, 3,(IF( Call_Close_Score__c &gt; 4.50 &amp;&amp; Call_Close_Score__c &lt;= 4.75, 4,(IF( Call_Close_Score__c &gt; 4.75 &amp;&amp; Call_Close_Score__c &lt;= 4.85,5,6))) ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPD CC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>