force-app/main/default/objects/QualityAssurance__c/fields/PPD_CE__c.field-meta.xml
<CustomField>
    <fullName>PPD_CE__c</fullName>
    <formula>IF(  Customer_Experience_Score__c &lt;= 15.00, 1,(IF( Customer_Experience_Score__c &gt; 15.00&amp;&amp; Customer_Experience_Score__c &lt;= 20.00, 2,(IF( Customer_Experience_Score__c &gt; 20 &amp;&amp; Customer_Experience_Score__c &lt;= 23.00, 3,(IF( Customer_Experience_Score__c &gt; 23.00 &amp;&amp; Customer_Experience_Score__c &lt;= 26.50, 4,(IF( Customer_Experience_Score__c &gt; 26.50 &amp;&amp; Customer_Experience_Score__c &lt;= 27.50,5,6))) ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPD CE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>