force-app/main/default/objects/QualityAssurance__c/fields/PPD_CO__c.field-meta.xml
<CustomField>
    <fullName>PPD_CO__c</fullName>
    <formula>IF( Call_Opening_Score__c &lt;= 3.50, 1,(IF( Call_Opening_Score__c  &gt; 3.50  &amp;&amp; Call_Opening_Score__c  &lt;= 4, 2,(IF( Call_Opening_Score__c  &gt; 4 &amp;&amp; Call_Opening_Score__c  &lt;= 4.50, 3,4))) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPD CO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>