force-app/main/default/objects/QualityAssurance__c/fields/PPD_NI__c.field-meta.xml
<CustomField>
    <fullName>PPD_NI__c</fullName>
    <formula>IF(   Need_Identification_Score__c &lt;= 12.30, 1,(IF( Need_Identification_Score__c&gt; 12.30 &amp;&amp; Need_Identification_Score__c&lt;= 15.00, 2,(IF( Need_Identification_Score__c&gt; 15 &amp;&amp; Need_Identification_Score__c&lt;= 18.00, 3,(IF( Need_Identification_Score__c&gt; 18.00 &amp;&amp; Need_Identification_Score__c&lt;= 21.00, 4,(IF( Need_Identification_Score__c &gt; 21.00 &amp;&amp; Need_Identification_Score__c&lt;= 24.00,5,6))) ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPD NI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>