force-app/main/default/objects/QualityAssurance__c/fields/Privacy__c.field-meta.xml
<CustomField>
    <fullName>Privacy__c</fullName>
    <label>Privacy</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Applicable</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>