force-app/main/default/objects/QualityAssurance__c/fields/Proactive_Attempt_at_Objection_Handling__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Attempt_at_Objection_Handling__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Proactive Attempt at Objection Handling</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>