force-app/main/default/objects/QualityAssurance__c/fields/Product_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Product_Knowledge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Knowledge</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>