force-app/main/default/objects/QualityAssurance__c/fields/QASF_Review_Form__c.field-meta.xml
<CustomField>
    <fullName>QASF_Review_Form__c</fullName>
    <description>Link to the Quality Assurance Review Form</description>
    <label>QASF Review Form</label>
    <referenceTo>QA_Strategy__c</referenceTo>
    <relationshipLabel>QA</relationshipLabel>
    <relationshipName>QA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>