force-app/main/default/objects/QualityAssurance__c/recordTypes/Call.recordType-meta.xml
<RecordType>
    <fullName>Call</fullName>
    <active>true</active>
    <description>To be used while doing quality assurance audit of a call</description>
    <label>Call</label>
</RecordType>