force-app/main/default/objects/QualityAssurance__c/recordTypes/Data.recordType-meta.xml
<RecordType>
    <fullName>Data</fullName>
    <active>true</active>
    <description>To be used while doing quality assurance audit of Data within Salesforce</description>
    <label>Data</label>
</RecordType>