force-app/main/default/objects/QualityAssurance__c/validationRules/CC_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Correct_Exit_Used__c &gt;= 7</errorConditionFormula>
    <errorDisplayField>Correct_Exit_Used__c</errorDisplayField>
    <errorMessage>Call Close related scoring is wrong and needs review and amendment</errorMessage>
</ValidationRule>