force-app/main/default/objects/QualityAssurance__c/validationRules/CE_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CE_Validation</fullName>
    <active>true</active>
    <description>CE Validation</description>
    <errorConditionFormula>Tone_Style__c &gt;= 7  ||  
Telephone_Etiquette__c &gt;= 7</errorConditionFormula>
    <errorMessage>One of the scoring under Customer Experience section is wrong, please review the same and make the amendments.</errorMessage>
</ValidationRule>