force-app/main/default/objects/QualityAssurance__c/validationRules/Correct_Greeting_Used.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Greeting_Used</fullName>
    <active>true</active>
    <description>Correct Greeting Used</description>
    <errorConditionFormula>Correct_Greeting_Used_Identifies_Self__c  &gt;= 5</errorConditionFormula>
    <errorDisplayField>Correct_Greeting_Used_Identifies_Self__c</errorDisplayField>
    <errorMessage>The Competency score values for the given fields is inappropriate. Please review the data and do the changes.</errorMessage>
</ValidationRule>