force-app/main/default/objects/QualityAssurance__c/validationRules/Identifies_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Identifies_Customer</fullName>
    <active>true</active>
    <description>Validation Rule for Identifies Customer field</description>
    <errorConditionFormula>Identifies_Customer__c  &gt;= 5</errorConditionFormula>
    <errorDisplayField>Identifies_Customer__c</errorDisplayField>
    <errorMessage>The Competency score values for the given fields is inappropriate. Please review the data and do the changes.</errorMessage>
</ValidationRule>