force-app/main/default/objects/QualityAssurance__c/validationRules/NIS_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NIS_Validation</fullName>
    <active>true</active>
    <description>NIS validation rule</description>
    <errorConditionFormula>Contact_Details_Confirmed_n_Updated__c &gt;= 7  ||  
Communication_Active_Listening_Skills__c &gt;= 7  ||  
Open_ended_Q_to_Identify_Cust_Travel__c &gt;= 7</errorConditionFormula>
    <errorMessage>One or more of the Need Identification Scoring is wrong hence needs to be reviewed and corrected.</errorMessage>
</ValidationRule>