force-app/main/default/objects/QualityAssurance__c/validationRules/PMI_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PMI_Validation</fullName>
    <active>true</active>
    <description>PMI Validation</description>
    <errorConditionFormula>Product_Knowledge__c &gt;= 7  || Information_Resources__c  &gt;= 7</errorConditionFormula>
    <errorMessage>One or both of the PMI scoring is wrong, please review the data and correct accordingly.</errorMessage>
</ValidationRule>