force-app/main/default/objects/QualityAssurance__c/listViews/Martyne_Ford.listView-meta.xml
<ListView>
    <fullName>Martyne_Ford</fullName>
    <columns>NAME</columns>
    <columns>Call_Score__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Call_Topic__c</columns>
    <columns>Call_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Martyne Ford</label>
    <sharedTo>
        <group>QIS_QA_Group</group>
        <group>System_Admins</group>
    </sharedTo>
</ListView>